force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/Cloudrop__SObjectWithDefaultEmailField__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SObjectWithDefaultEmailField</label>
</CustomObject>