force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__ChildObjectName__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ChildObjectName__c</fullName>
    <label>ChildObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>