force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__ChildRelationshipName__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ChildRelationshipName__c</fullName>
    <label>ChildRelationshipName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>