force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__Default_CC_Fields__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_CC_Fields__c</fullName>
    <label>Default CC Fields</label>
    <type>TextArea</type>
</CustomField>