force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__Email_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Field_Name__c</fullName>
    <label>Email Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>