force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Reference_Field__c</fullName>
    <label>Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>