force-app/main/default/objects/Cloudrop__SObjectWithDefaultEmailField__c/fields/Cloudrop__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>